ingress/service-myshiny.yaml
apiVersion: v1
kind: Service
metadata:
  name: myshiny-service
spec:
  ports:
  - port: 3838
    targetPort: 3838
    protocol: TCP
  selector:
    app: myshiny
